# cicd-ai-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  SAMPLE_GITHUB_OUT.md  pyproject.toml
cicd-artifacts/: mypy-results-eval.json  mypy-results-short-debug.json  pds-output.txt  pydocstyle-output-short.txt  pydocstyle-results-eval.txt  rl-results.json  ruff-format-cicd-short.txt  ruff-format-results-eval.txt  ruff-lint-results-eval.json
cicd-artifacts-target/: mypy-results.py
debug/: debug_0c40692.py  debug_3.py
docs/: SIGNAL_CONTEXT_REQUIREMENTS.md  TOOL_SPECIFIC_PROMPTS.md  architectural-design.md  cicd-signal-config.md  current-application-setup.md  current-directory-setup.md  directory-plan.md  evaluation-framework.md  git-history-summary-detailed.md  git-history-summary.md  module-architecture-diagram.md
logs/: run_report_20260209_122654.txt  run_report_20260209_123445.txt  run_report_20260209_123836.txt  run_report_20260209_143401.txt  run_report_20260209_152130.txt  run_report_20260209_155507.txt
plans/: bandit-integration.md  pip-audit-integration.md  pydocstyle-integration.md  vulture-integration.md
sample-cicd-artifacts/: bandit-results.json  mypy-results-short-debug.json  mypy-results-short.json  pydocstyle-output-debug.txt  pytest-coverage.json  pytest-coverage.xml  pytest-results.xml  ruff-format-cicd.txt  ruff-format-results.json  ruff-lint-results.json
scripts/: README.md  commit_debug_file_edits.json  context_output.json  debug_combined.txt  debug_fileedit_1.txt  debug_fileedit_2.txt  debug_fileedit_3.txt  debug_git_commit_module.py  (+10 more)
(+265 files in other folders)
